# data-analysis-agent

./: LICENSE  README.md  pyproject.toml
data_analysis_agent/: __init__.py  actions.py  enum.py  executor.py  planner.py  struct.py  util.py
data_analysis_agent/environment/: __init__.py  base.py  pandas.py
example_notebook/: sample.ipynb
