[tool.poetry]
name = "data-analysis-agent"
version = "0.1.0"
description = ""
authors = ["Taiga Noumi <Noumi.Taiga@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
openai = "^1.43.0"
pydantic = "^2.8.2"
typed-ast = "^1.5.5"

[tool.pysen]
version = "0.11"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = true
mypy_preset = "strict"
line_length = 88
py_version = "py310"
isort_known_first_party = ["data_analysis_agent"]
[[tool.pysen.lint.mypy_targets]]
  paths = ["."]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
